PRFL-492 findbugs cleanup part eins
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@84760 66ffb92e-73f9-0310-93c1-f5514f145a0a